--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ authors = ["Satyam Tiwary <satyam@technoculture.io>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.12"
+python = ">3.10.9"
+torch = "^2.3.1"
+torchvision = "^0.18.1"
+torchaudio = "^2.3.1"
+transformers = "^4.41.2"
+tiktoken = "^0.7.0"
 
 
 [build-system]
